--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body {
 .heart-bg {
     position: fixed;
     bottom: -10vh;
-    color: #ff4757; /* Cor vermelha/rosa vibrante */
+    color: #ff4757; /* Vermelho/Rosa vibrante */
     font-size: 25px;
     z-index: 0; /* Fica no fundo */
     animation: floatUp linear forwards;
@@ -86,3 +86,4 @@ body {
     90% { opacity: 1; }
     100% { transform: translateY(-120vh) rotate(360deg) scale(1.2); opacity: 0; }
 }
+
